[project]
name = "iplooker"
version = "0.1.7"
description = "Look up location, ISP, and more about an IP address from multiple sources"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
urls = { repository = "https://github.com/dannystewart/iplooker" }
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pycountry (>=24.6.1,<25.0.0)",
    "devpkg (>=0.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "textparse (>=0.1.2)",
    "arguer (>=0.1.1,<0.2.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.2"
mypy = ">=1.15.0"
arguer = { path = "../arguer", develop = true }
devpkg = { path = "../devpkg", develop = true }
enviromancer = { path = "../enviromancer", develop = true }
logician = { path = "../logician", develop = true }
shelper = { path = "../shelper", develop = true }
textparse = { path = "../textparse", develop = true }
timecapsule = { path = "../timecapsule", develop = true }
walking-man = { path = "../walking-man", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
iplooker = "iplooker.ip_lookup:main"
