[project]
name = "iplooker"
version = "0.5.4.dev0"
description = "Look up location, ISP, and more about an IP address from multiple sources"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
urls = { repository = "https://github.com/dannystewart/iplooker" }
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<4.0"
dependencies = [
    "polykit (>=0.15.0)",
    "pycountry (>=26.2.16,<27.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1"
polykit = { path = "../polykit", develop = true }
ruff = ">=0.15.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
iplooker = "iplooker.ip_looker:main"
